# my-agent-assignment

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
api/: main.py
data/kg/: schema.cypher  seed.cypher
data/manuals/: DA-OPS-MAN_DieAttach.md  FC-OPS-MAN_FlipChip.md  PA-2200-series.md  WB-OPS-MAN_WireBond.md
data/sql/: schema.sql
docs/: PRD_stage1.md  PRD_v2.md  agent_design.md  api_ui.md  data_schema.md  staff_review_OLA.md
eval/: eval_sets.py  metrics.py  run.py  run_agent_evals.py  run_loop_evals.py
scripts/: demo.py  deploy.sh  setup-droplet.sh
sim/: persona.py
src/ola/: bootstrap.py  config.py  consolidation.py  context_assembler.py  pipeline.py  sessions.py  synopsis.py  telemetry.py
src/ola/agents/: extractor.py  manual_extractor.py  memory_manager.py  provider.py  responder.py  reviewer.py
src/ola/api/: app.py  auth.py  routes.py  schemas.py
src/ola/conformance/: outcome_resolver.py  router.py
src/ola/domain/: events.py  memory.py  signals.py
src/ola/kg/: client.py  projection.py  queries.py  seed.py
src/ola/memory/: store.py  synopsis.py  tiers.py
src/ola/personalization/: render.py  validation_gate.py
tests/: test_projection.py  test_sessions.py  test_store.py  test_tiers.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css  theme.ts  types.ts
ui/src/components/: ChatWindow.tsx  ConversationPanel.tsx  ProfilePanel.tsx  SessionEndDiff.tsx  ShiftEndDiff.tsx  SynopsisPanel.tsx
