[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ola"
version = "0.1.0"
description = "Operator Learning Assistant — Stage 1: Core Learning Loop"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.0.14,<1.0",
    "openai>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "neo4j>=5.0",
    "mlflow>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
ola-demo = "scripts.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ola"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
